<resources>
    <string name="app_name">SmartPerty</string>

    <!-- Strings related to login -->
    <string name="prompt_email">帳號</string>
    <string name="prompt_password">密碼</string>
    <string name="action_sign_in">登入</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">註冊</string>
    <string name="action_forget_password">忘記密碼</string>
    <string name="login_about_us">about us</string>
    <string name="login_policy">policy</string>

    <!-- Strings related to tenant -->
    <string name="title_activity_tenant">TenantActivity</string>
    <string name="tenant_title_menu">控制</string>
    <string name="tenant_title_notification">消息</string>
    <string name="tenant_title_home">首頁</string>
    <string name="tenant_title_chat">聊天</string>
    <string name="tenant_title_group">設定</string>
    <string name="tenant_home_greet">Hello~Derek君!</string>
    <string name="tenant_home_message">早安!!</string>
    <string name="tenant_home_temperature">21°C</string>
    <string name="tenant_home_title_housing_rules">住屋守則</string>
    <string name="tenant_home_title_rent_and_utilities">房租水電</string>
    <string name="tenant_home_title_equipment_manual">設備手冊</string>
    <string name="tenant_home_title_contract">房子合約</string>
    <string name="tenant_home_title_attractions_nearby">周邊景點</string>
    <string name="tenant_home_title_repair">故障報修</string>
    <string name="toolbar_button_setup">設定</string>
    <string-array name="repair_type_list">
        <item>設備</item>
        <item>租約</item>
        <item>使用</item>
    </string-array>
    <string-array name="personnel_type_list">
        <item>租客</item>
        <item>維修人員</item>
        <item>會計</item>
        <item>管理</item>
    </string-array>
    <string-array name="repair_status_list">
        <item>已接案</item>
        <item>已指派</item>
        <item>處理中</item>
        <item>已結案</item>
    </string-array>

    <!-- Strings related to landlord-->
    <string name="title_activity_landlord">LandlordActivity</string>
    <string name="landlord_title_menu">控制</string>
    <string name="landlord_title_notification">消息</string>
    <string name="landlord_title_home">首頁</string>
    <string name="landlord_title_chat">聊天</string>
    <string name="landlord_title_group">設定</string>
    <string name="landlord_title_object_folder">物件</string>
    <string name="landlord_title_object_list">單位列表</string>
    <string name="landlord_title_object_item">單位資訊</string>
    <string name="landlord_title_contract">合約</string>
    <string name="landlord_title_repair">維修</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dash">-</string>
    <string name="title_activity_maps">Map</string>
    <string name="landlord_title_data_analysis">數據</string>
    <string name="landlord_title_finance">財務</string>
    <string name="landlord_title_personnel">人員</string>

    <string name="about_us">
使用條款\n
\n
【 於 2018 年 11 月 21 日更新 】\n
\n
歡迎您使用本公司開發之 Smartperty 應用程式（包含產品網頁版及APP，以下簡稱本服務），為保障您的權益，請詳細閱讀下列條款內容，當您開始使用本服務，將視您已閱讀、瞭解並同意遵守下列條款，及相關法律規定。本公司擁有隨時修改、變更本服務之使用條款內容之權利，使用者應隨時注意本服務該等修改以及變動之內容。使用者於任何服務條款內容與使用規範修改或變動後繼續使用本服務，即視為使用者同意本服務該等修改或變動之內容。如使用者違反了本服務使用條款，本服務保留隨時暫時停止提供服務、或終止提供服務之權利。\n
\n
一、服務內容\n
\n
本服務 APP 提供 iOS 與 Android 作業系統使用，可安裝於智慧型行動設備(包含智慧型手機、平板)，服務內容包含物業查詢、物業分析、維修管理、財務查詢等。\n
\n
二、免責聲明\n
\n
本服務依本公司既有之規劃提供，不保證符合管理者或使用者的全部需求、不受干擾或免於出錯。如因下載、安裝、使用本服務，致使用者直接或間接之損害或損失時，本公司不負任何責任。本公司如因情事變更，得暫停或終止本服務全部或一部，管理者或使用者不得異議或要求任何補償。\n
\n
本服務依一般合理之技術及方式，維持系統及服務之正常運作。但於下列各項情況時，本平台有權可以停止、中斷提供本服務，且不會為下列原因所引發的損失或傷害而負賠償責任。\n
\n
本服務相關設備進行必要之保養及施工時。\n
本服務相關設備發生突發性之故障時。\n
本服務申請之電子通信服務被停止，無法提供服務時。\n
第三人透過本服務傳輸任何錯誤軟體、病毒、木馬或類似性質的程式。\n
由於天災等不可抗力之因素或其他不可歸責致使無法提供服務時。\n
使用本服務之使用者，若與他人間因使用本服務APP而產生之爭議及訴訟，由使用者與爭議人自行溝通、協調，概與本公司無涉，本公司不負任何責任。\n
\n
三、使用者規範\n
\n
使用者使用本服務之行為規範須遵守相關法規及一切使用網際網路相關規定。使用者同意並保證不得利用本服務從事侵害他人權益或違法之行為，包括但不限於下列事項：\n
\n
上傳、張貼、公布或傳送任何誹謗、侮辱、具威脅性、攻擊性、不雅、猥褻、不實、違反公共秩序或善良風俗或其他不法之文字、圖片或任何形式的檔案於本服務上。\n
侵害他人名譽、隱私權、營業秘密、商標權、著作權、專利權、其他智慧財產權及其他權利。\n
違反依法律或契約所應負之保密義務。\n
冒用他人名義使用本服務。\n
上載、張貼、傳輸或散佈任何含有電腦病毒或任何對電腦軟、硬體產生中斷、破壞或限制功能之程式碼之資料。\n
從事不法交易行為或張貼虛假不實、引人犯罪之訊息。\n
販賣槍枝、毒品、禁藥、盜版軟體或其他違禁物。\n
提供賭博資訊或以任何方式引誘他人參與賭博。\n
濫發廣告郵件、垃圾郵件、連鎖信、違法之多層次傳銷訊息等。\n
以任何方法傷害未成年人。\n
偽造訊息來源或以任何方式干擾傳輸來源之認定。\n
干擾或中斷本服務或伺服器或連結本服務之網路，或不遵守連結至本服務之相關需求、程序、政策或規則等，包括但不限於：使用任何設備、軟體或刻意規避本服務之排除自動搜尋之標頭 (robot exclusion headers)。\n
對於恐怖行動提供任何實質支持或資源。\n
追蹤他人或其他干擾他人或為非法取得、蒐集或儲存他人之非公開資訊。\n
其他本服務有正當理由認為不適當之行為。\n
若使用者在本服務上所傳輸或儲存的資料，有違反法令、違反本使用規範、或有侵害第三人權益之虞，本公司保留隨時直接加以移動或刪除之權利。若本公司或服務因此受到任何損害，使用者應對本公司負損害賠償之責。使用者同意若本服務之使用被終止或限制時，本公司對使用者或任何第三人均不承擔責任。\n
\n
 四、個人資料蒐集告知條款\n
\n
本公司於本服務期間基於使用者管理與服務合理關聯之特定目的範圍內，蒐集、處理及利用包括但不限於使用者本人所填寫之所有個人資料，俾利本公司得以提供本服務，並得以發送本服務相關訊息。若提供之資料不足或有誤時，本公司將無法提供完整服務。使用者及管理者開始使用本服務時，則視為已了解及同意本公司及本服務對其個人資料之合法使用。\n
\n
使用者了解並同意，本服務依上述提供服務之必要範圍外，據法律的要求或基於以下目的之合理必要範圍內，認定必須將使用者的帳戶資訊或內容，加以保存或揭露予政府機關、司法警察等時，得加以保存及揭露：\n
\n
遵守法令或政府機關之要求。\n
為防止他人權益之重大危害而有必要者。\n
為免除使用者及公眾之生命、身體、自由、權利、財產上之急迫危險者。\n
關於您的註冊及其他特定資料均依本服務「隱私權政策」受到保護與規範，更詳盡的隱私權政策請見本公司網站隱私權政策說明。\n
\n
五、智慧財產保護\n
\n
本服務及相關網站上所使用或提供之軟體、程式及內容（包括但不限於文字、說明、圖畫、圖片、貼圖、圖形、檔案、頁面設計、網站規劃與安排等）之專利權、著作權、商標權、營業秘密、專門技術及其他智慧財產權均屬本公司或其他權利人所有，非經權利人事先書面授權同意，不得重製、公開傳播、公開播送、公開演出、公開上映、改作、編輯、出租、散佈、進行還原工程、解編、反向組譯、或其他方式之使用，如有違反，除應自行負法律責任外，如因而對本公司造成損害或損失，本公司得向您請求損害賠償。\n
\n
六、準據法及管轄法院\n
\n
使用者條款的適用、解釋及補充，均依照中華民國台灣的法律定之。\n
\n
七、如果您有任何關於本產品使用條款的問題或疑慮，可以透過電子郵件 support@smartperty.com 與我們聯繫。\n
    </string>

    <string name="privacy">
隱私權政策\n
\n
【於 2018 年 10 月 08 日更新】\n
\n
歡迎您使用股份有限公司（以下簡稱本公司）開發之 Smartperty 應用程式（包含產品網頁版及APP，以下簡稱本服務），本公司非常重視您的隱私權益，為了讓您能夠安心的使用本服務的各項功能與資訊，特此向您說明本服務的隱私權保護政策，以保障您的權益，請您詳閱下列內容：\n
\n
一、隱私權保護政策的適用範圍\n
\n
隱私權保護政策內容，包括本公司如何處理在您使用本服務時收集到的個人識別資料。隱私權保護政策不適用於本服務以外的相關連結內容，也不適用於非本服務所委託或參與管理的人員。\n
\n
二、個人資料的蒐集、處理及利用方式\n
\n
當您使用本服務時，我們將視業務或活動性質請您提供必要的個人資料，並在提升服務與優化您的使用體驗為前提之目的範圍內處理及利用您的個人資料。\n
本服務在您使用服務信箱時，會保留您所提供的姓名、電子郵件地址、聯絡方式及使用時間等。\n
於一般瀏覽時，伺服器會自行記錄相關行徑，包括您使用連線設備的IP位址、使用時間、使用的瀏覽器、瀏覽及點選資料記錄等，做為我們增進網站服務的參考依據，此記錄為內部應用，不對外公佈。\n
三、資料之保護\n
\n
本服務主機均設有防火牆、防毒系統等相關的各項資訊安全設備及必要的安全防護措施，採用嚴格的保護措施保護網站及您的個人資料。\n
四、網站對外的相關連結\n
\n
本服務的網頁提供其他網站的網路連結，您也可經由本服務所提供的連結，點選進入其他網站。但該連結網站不適用本服務的隱私權保護政策，您必須參考該連結網站中的隱私權保護政策。\n
\n
五、與第三人共用個人資料之政策\n
\n
本服務絕不會提供、交換、出租或出售任何您的個人資料給其他個人、團體、私人企業或公務機關，但有法律依據或合約義務者，不在此限。\n
\n
前項但書之情形包括不限於：\n
\n
經由您書面同意。\n
法律明文規定。\n
當您的使用服務行為，違反服務條款或可能損害或妨礙網站與其他使用者權益或導致任何人遭受損害時，經網站管理單位研析揭露您的個人資料是為了辨識、聯絡或採取法律行動所必要者。\n
六、Cookie 之使用\n
\n
為了提供您最佳的服務，本服務會在您的電腦中放置並取用我們的 Cookie，若您不願接受 Cookie 的寫入，您可在您使用的瀏覽器功能項中設定隱私權等級為高，即可拒絕 Cookie 的寫入，但可能會導致網站某些功能無法正常執行。\n
\n
七、個人帳號之刪除\n
\n
您可隨時透過電子郵件 support@smartperty.com 向我們要求刪除您的帳號及內含的個人資料。在您要求刪除帳號後，依本公司系統運作流程可能需經過一段時間才會從伺服器中完全刪除，若該帳號曾留存內容或資料於所加入的公司內，則相關內容或資料將由該公司內擁有管理權限之管理者自行處理。帳號刪除後您將無法再用原帳號登入本公司提供之服務。\n
\n
八、隱私權保護政策之修正\n
\n
本網站隱私權保護政策將因應需求隨時進行修正，修正後的條款將刊登於 Smartperty 產品官網。當您於隱私權政策內容修改或變動後繼續使用本服務，即視為您同意本服務該等修改或變動之內容。\n
\n
九、如果您有任何關於本產品隱私權政策的問題或疑慮，可以透過電子郵件 support@smartperty.com 與我們聯繫。\n

    </string>
    <string name="moneyUnit">$</string>
    <string name="squareFtUnit">坪</string>
    <string name="selectButton">選擇</string>
    <string name="houseImageDescription">house image</string>
    <string name="propertyCountUnit">戶</string>
    <string name="rentRate">出租率</string>
    <string name="rentRateUnit">%</string>
    <string name="notificationTag">notification tag</string>
    <string name="personnel_controll_button">personnel controll button</string>
    <string name="startAppButton">開始使用</string>
    <string name="selectDate">選擇日期</string>
    <string name="selectTime">選擇時間</string>
    <string name="dateTime">日期時間</string>
    <string name="company">公司</string>
    <string name="phone">電話</string>
    <string name="name">姓名</string>
    <string name="selectPropertyLIst">選擇列表</string>
    <string name="follow_by">依</string>
    <string name="classify_property">分物件</string>
    <string name="distribute">分佈</string>
    <string name="due_date">到期日:</string>
    <string name="rentAmount">租金</string>
    <string name="rentInformationTitle">租金明細</string>
    <string name="repairInformationTitle">維修紀錄</string>
    <string name="parking_space_title">車位</string>
    <string name="square_ft_title">面積</string>
    <string name="floor_title">樓層</string>
    <string name="rent_allotted_time_title">租期</string>
    <string name="tenant_title">房客</string>
    <string name="address_title">地址</string>
    <string name="title">名稱</string>
    <string name="add_image_description">add image</string>
    <string name="select_by_group">選群組</string>
    <string name="select_by_property">選物件</string>
    <string name="select_by_date_time">選時間</string>
    <string name="income">收入</string>
    <string name="outcome">支出</string>
    <string name="total_revenue">總收益</string>
    <string name="forget_password_please_enter_phone">請輸入您申請/開通帳號時登記的手機號碼</string>
    <string name="forget_password_please_enter_verification_code">請輸入您申請/開通帳號時登記的手機號碼</string>
    <string name="forget_password_verification_ps">驗證正確後即可重設密碼</string>
    <string name="phone_number">手機號碼</string>
    <string name="verification_code">驗證碼</string>
    <string name="send_verification_code">發送驗證碼</string>
    <string name="submit_verification">驗證</string>
    <string name="contact_us_description">還不是會員？請</string>
    <string name="contact_us">聯繫我們</string>
    <string name="logo">logo</string>
    <string name="policy_description">繼續使用 Smart Perty，既表示</string>
    <string name="slogan">全方位輕鬆管理您的物業</string>
    <string name="policy_description_2">您已同意</string>
    <string name="and">與</string>
    <string name="about_as">使用條款</string>
    <string name="privacy_policy">隱私政策</string>
    <string name="email">電郵信箱</string>
    <string name="head_image">head image</string>
</resources>
