<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/landlord_menu"
        android:icon="@drawable/button_nav_controll"
        android:title="@string/landlord_title_menu" />

    <item
        android:id="@+id/landlord_notification"
        android:icon="@drawable/button_nav_notification"
        android:title="@string/landlord_title_notification" />

    <item
        android:id="@+id/landlord_home"
        android:icon="@drawable/button_nav_home"
        android:title="@string/landlord_title_home" />

    <item
        android:id="@+id/landlord_chat"
        android:icon="@drawable/button_nav_chat"
        android:title="@string/landlord_title_chat" />

    <item
        android:id="@+id/landlord_group"
        android:icon="@drawable/button_nav_setup"
        android:title="@string/landlord_title_group" />

</menu>
