<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landlord_menu"
    app:startDestination="@id/landlordMenuFragment">

    <fragment
        android:id="@+id/landlordMenuFragment"
        android:name="com.example.smartperty.landlord.menu.LandlordMenuFragment"
        android:label="@string/landlord_title_menu"
        tools:layout="@layout/landlord_fragment_menu_main">
        <action
            android:id="@+id/action_landlordMenuFragment_to_landlordObjectFolderFragment"
            app:destination="@id/landlordObjectFolderFragment" />
        <action
            android:id="@+id/action_landlordMenuFragment_to_landlordContractFragment"
            app:destination="@id/landlordContractFragment" />
        <action
            android:id="@+id/action_landlordMenuFragment_to_landlordRepairFragment"
            app:destination="@id/landlordRepairFragment" />
        <action
            android:id="@+id/action_landlordMenuFragment_to_landlordPersonnelListFragment"
            app:destination="@id/landlordPersonnelListFragment" />
    </fragment>
    <fragment
        android:id="@+id/landlordObjectFragment"
        android:name="com.example.smartperty.landlord.menu.object.objectItem.LandlordObjectItemFragment"
        android:label="@string/landlord_title_object_item"
        tools:layout="@layout/landlord_fragment_object_item" />
    <fragment
        android:id="@+id/landlordObjectFolderFragment"
        android:name="com.example.smartperty.landlord.menu.object.objectFolder.LandlordObjectFolderFragment"
        android:label="@string/landlord_title_object_folder"
        tools:layout="@layout/landlord_fragment_object_folder">
        <action
            android:id="@+id/action_landlordObjectFolderFragment_to_landlordObjectListFragment"
            app:destination="@id/landlordObjectListFragment" />
    </fragment>
    <fragment
        android:id="@+id/landlordObjectListFragment"
        android:name="com.example.smartperty.landlord.menu.object.objectList.LandlordObjectListFragment"
        android:label="@string/landlord_title_object_list"
        tools:layout="@layout/landlord_fragment_object_list">
        <action
            android:id="@+id/action_landlordObjectListFragment_to_landlordObjectItemFragment"
            app:destination="@id/landlordObjectFragment" />
    </fragment>
    <fragment
        android:id="@+id/landlordContractFragment"
        android:name="com.example.smartperty.landlord.menu.contract.LandlordContractFragment"
        android:label="@string/landlord_title_contract"
        tools:layout="@layout/landlord_fragment_contract">
        <action
            android:id="@+id/action_landlordContractFragment_to_landlordObjectItemFragment"
            app:destination="@id/landlordObjectFragment" />
    </fragment>
    <fragment
        android:id="@+id/landlordRepairFragment"
        android:name="com.example.smartperty.landlord.menu.repair.repairList.LandlordRepairListFragment"
        android:label="@string/landlord_title_repair"
        tools:layout="@layout/landlord_fragment_repair_list" >
        <action
            android:id="@+id/action_landlordRepairListFragment_to_landlordRepairItemFragment"
            app:destination="@id/landlordRepairItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/landlordRepairItemFragment"
        android:name="com.example.smartperty.landlord.menu.repair.repairItem.LandlordRepairItemFragment"
        android:label="landlord_fragment_repair_item"
        tools:layout="@layout/landlord_fragment_repair_item" />
    <fragment
        android:id="@+id/landlordPersonnelListFragment"
        android:name="com.example.smartperty.landlord.menu.personnel.LandlordPersonnelListFragment"
        android:label="人員"
        tools:layout="@layout/landlord_fragment_personnel_list" />

</navigation>